  in OpenSSL 1.1.0 (From Henrik)
* Fix overflow when skipping >2G pending data in logfetch
  (Reported by Sergey, a_s_y at sama.ru)
* xymond_alert will no longer exit and be relaunched if started
  while there's no actual alertable condition. (Thanks, Franco G.)
* Fix mis-parsing of PCRE regex's in client-local.cfg when char
  ranges are present (Reported by Erik D. Schminke)


Changes from 4.3.26 -> 4.3.27 (24 Mar 2016)
===========================================

* rev 7957

* Don't treat empty (0 byte) directory size as invalid 
  (Reported by Bert Willekens)
* Fix looping redirect on criticaleditor.sh
* Allow NK-critical acknowledgements from status pages
* Fix redirect to criticalview.sh, which is just a
  regular CGI
* Properly recognize https URLs as summary links (Thanks, 
  David Steinn Geirsson)
* Add compile-time check for SSLv3 support


Changes from 4.3.25 -> 4.3.26 (19 Feb 2016)
===========================================

* rev 7906

* Fix javascript failures on info/trends pages caused by CSP fixes
* Fix incorrect HTTP refresh on rejected enadis.sh POSTs
* Do not auto-refresh info or trends svcstatus pages
* Revert default svcstatus page refresh interval from 30s back to 60s
* Re-introduce XYMWEBREFRESH variable to control refresh interval
* HTML encode most fields on info page
* Restrict characters allowed for hostnames and testnames
* HTML encode error log output on xymond/net/gen pages
* HTML encode ghost hostnames output on xymond/ghostlist pages
* logfetch: only evaluate the first config of a given type seen for 
  the same file name
* xymongen/reports: fix vague error message around missing history files
  and properly exclude clientlog statuses (Reported by Magdi Mahmoud)
* Ensure configured CLASS overrides in hosts.cfg are always passed on 
  to client workers, regardless of 'class' for that specific message
  (Reported by Steve Hill)

Changes from 4.3.24 -> 4.3.25 (05 Feb 2016)
===========================================

* rev 7890
